--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Serif:ital,opsz,wght@0,8..144,100..900;1,8..144,100..900&display=swap');
 @import "tailwindcss";
 .font-roboto-serif {
-  font-family: "Roboto Serif", serif;
+  font-family: "Merriweather", serif;
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
