--- a/client/src/index.css
+++ b/client/src/index.css
@@ -9,3 +9,12 @@
     "wdth" 100,
     "GRAD" 0;
 }
+.font-pacifico {
+  font-family: "Pacifico", cursive;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+  font-variation-settings:
+    "wdth" 100,
+    "GRAD" 0;
+}
